--- a/hyprshit/.config/hypr/hyprland.conf
+++ b/hyprshit/.config/hypr/hyprland.conf
@@ -130,10 +130,10 @@ dwindle {
     preserve_split = true # You probably want this
 }
 
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-master {
-    new_is_master = true
-}
+# # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+# master {
+#     new_is_master = true
+# }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
