--- a/hyprshit/.config/hypr/hyprland.conf
+++ b/hyprshit/.config/hypr/hyprland.conf
@@ -32,8 +32,8 @@ env = bitdepth,10
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
-$menu = wofi --show drun
-
+# $menu = wofi --show drun
+$menu = anyrun 
 
 #################
 ### AUTOSTART ###
@@ -44,8 +44,8 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 exec-once = nm-applet &
-exec-once = waybar 
-exec-once = swaybg -i ~/images/wallpaper/rengoku.png 
+exec-once = ags 
+exec-once = swaybg -i ~/Wallpaper/main.jpeg 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 
@@ -68,7 +68,7 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 8
 
     border_size = 2
 
@@ -93,10 +93,10 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    # drop_shadow = true
+    # shadow_range = 4
+    # shadow_render_power = 3
+    # col.shadow = rgba(1a1a1aee)
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -193,6 +193,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, Space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod SHIFT, S, exec, slurp | grim -g - ~/Screenshot/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')  
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -229,7 +230,7 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+#bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
