--- a/hyprshit/.config/hypr/hyprland.conf
+++ b/hyprshit/.config/hypr/hyprland.conf
@@ -45,7 +45,7 @@ $menu = anyrun
 # exec-once = $terminal
 exec-once = nm-applet &
 exec-once = ags 
-exec-once = swaybg -i ~/Wallpaper/main.jpeg 
+exec-once = swaybg -m fill -i ~//GitRepos/dotfiles/wallpaper/Wallpaper/$(go run ~/s/random-wallpaper.go ~/GitRepos/dotfiles/wallpaper/Wallpaper/)
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 
