--- a/hyprshit/.config/hypr/hyprland.conf
+++ b/hyprshit/.config/hypr/hyprland.conf
@@ -45,8 +45,9 @@ $menu = anyrun
 # exec-once = $terminal
 exec-once = nm-applet &
 exec-once = ags 
-exec-once = swaybg -m fill -i ~//GitRepos/dotfiles/wallpaper/Wallpaper/$(go run ~/s/random-wallpaper.go ~/GitRepos/dotfiles/wallpaper/Wallpaper/)
+# exec-once = swaybg -m fill -i ~//GitRepos/dotfiles/wallpaper/Wallpaper/$(go run ~/s/random-wallpaper.go ~/GitRepos/dotfiles/wallpaper/Wallpaper/)
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = hyprpaper
 
 
 #############################
@@ -137,8 +138,8 @@ dwindle {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -204,6 +205,9 @@ bind = $mainMod, down, movefocus, d
 # fullscreen
 bind = $mainMod, F, fullscreen
 
+$w1 = hyprctl hyprpaper wallpaper ",~/GitRepos/dotfiles/wallpaper/Wallpaper/127.png"
+$w2 = hyprctl hyprpaper wallpaper ",~/GitRepos/dotfiles/wallpaper/Wallpaper/126.png"
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
@@ -215,6 +219,9 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
+
+bind = $mainMod, 1, exec,$w1
+bind = $mainMod, 2, exec,$w2
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
