--- a/hyprshit/.config/hypr/hyprpaper.conf
+++ b/hyprshit/.config/hypr/hyprpaper.conf
@@ -1,8 +1,10 @@
-preload = ~/GitRepos/dotfiles/wallpaper/Wallpaper/127.png
-preload = ~/GitRepos/dotfiles/wallpaper/Wallpaper/126.png
-preload = ~/GitRepos/dotfiles/wallpaper/Wallpaper/E07-50.png
+#preload = ~/GitRepos/dotfiles/wallpaper/Wallpaper/127.png
+#preload = ~/GitRepos/dotfiles/wallpaper/Wallpaper/126.png
+#preload = ~/GitRepos/dotfiles/wallpaper/Wallpaper/E07-50.png
 
-wallpaper = , ~/GitRepos/dotfiles/wallpaper/Wallpaper/E07-50.png
+preload = ~/Wallpaper/footlessbird.png
+
+wallpaper = , ~/Wallpaper/footlessbird.png
 
 #enable splash text rendering over the wallpaper
 splash = off
