--- a/hyprshit/.config/hypr/hyprland.conf
+++ b/hyprshit/.config/hypr/hyprland.conf
@@ -195,6 +195,7 @@ bind = $mainMod, Space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, S, exec, slurp | grim -g - ~/Screenshot/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')  
+bind = $mainMod , L, exec, hyprlock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -258,10 +259,13 @@ bindm = $mainMod, mouse:273, resizewindow
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 
+
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = opacity 0.92 override 0.85 override,class:^(thunar)$
+
 
 
 
