--- a/hyprshit/.config/kitty/kitty.conf
+++ b/hyprshit/.config/kitty/kitty.conf
@@ -1,81 +1,85 @@
-# vim:fileencoding=utf-8:foldmethod=marker
+# vim:ft=kitty
 
-#: Fonts {{{
+font_size 14
 
-#: kitty has very powerful font management. You can configure
-#: individual font faces and even specify special fonts for particular
-#: characters.
+disable_ligatures never
 
-font_family        JetBrains Mono Regular
-bold_font        auto
+font_features MonaspaceNeon-Regular +calt +liga +dlig +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08
+
+cursor_shape beam
+mouse_hide_wait -1.0
+
+input_delay 0
+sync_to_monitor yes
+
+url_prefixes file ftp ftps gemini git gopher http https irc ircs kitty mailto news sftp
+detect_urls yes
+show_hyperlink_targets yes
+copy_on_select yes
+
+window_padding_width 10
+
+strip_trailing_spaces always
+
+background_opacity 0.9
+
+enable_audio_bell no
+confirm_os_window_close 0
 
 
-font_size 14.0
 
+## name: Rosé Pine Moon
+## author: mvllow
+## license: MIT
+## upstream: https://github.com/rose-pine/kitty/blob/main/dist/rose-pine-moon.conf
+## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
 
-symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d4,U+e200-U+e2a9,U+e300-U+e3e3,U+e5fa-U+e6b1,U+e700-U+e7c5,U+f000-U+f2e0,U+f300-U+f372,U+f400-U+f532,U+f0001-U+f1af0 Symbols Nerd Font Mono
-es the dock icon bounce on
-#: macOS or the taskbar flash on Linux.
+foreground               #e0def4
+background               #232136
+selection_foreground     #e0def4
+selection_background     #44415a
 
-bell_on_tab "🔔 "
+cursor                   #56526e
+cursor_text_color        #e0def4
 
+url_color                #c4a7e7
 
-tab_bar_style powerline
+active_tab_foreground    #e0def4
+active_tab_background    #393552
+inactive_tab_foreground  #6e6a86
+inactive_tab_background  #232136
 
-background_opacity 0.93
+active_border_color      #3e8fb0
+inactive_border_color    #44415a
 
-cursor                  #928374
-cursor_text_color       background
-
-url_color               #83a598
-
-visual_bell_color       #8ec07c
-bell_border_color       #8ec07c
-
-active_border_color     #d3869b
-inactive_border_color   #665c54
-
-foreground              #ebdbb2
-background              #282828
-selection_foreground    #928374
-selection_background    #ebdbb2
-
-active_tab_foreground   #fbf1c7
-active_tab_background   #665c54
-inactive_tab_foreground #a89984
-inactive_tab_background #3c3836
-
-# black  (bg3/bg4)
-color0                  #665c54
-color8                  #7c6f64
+# black
+color0   #393552
+color8   #6e6a86
 
 # red
-color1                  #cc241d
-color9                  #fb4934
+color1   #eb6f92
+color9   #eb6f92
 
-#: green
-color2                  #98971a
-color10                 #b8bb26
+# green
+color2   #adebb3
+color10  #adebb3
 
 # yellow
-color3                  #d79921
-color11                 #fabd2f
+color3   #f6c177
+color11  #f6c177
 
 # blue
-color4                  #458588
-color12                 #83a598
+color4   #9ccfd8
+color12  #9ccfd8
 
-# purple
-color5                  #b16286
-color13                 #d3869b
+# magenta
+color5   #c4a7e7
+color13  #c4a7e7
 
-# aqua
-color6                  #689d6a
-color14                 #8ec07c
+# cyan
+color6   #ea9a97
+color14  #ea9a97
 
-# white (fg4/fg3)
-color7                  #a89984
-color15                 #bdae93
-
-
-window_padding_width 8
+# white
+color7   #e0def4
+color15  #e0def4
